--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 ---
-layout: default
+layout: home
 ---
-
-<div class="home">
-
-  <h1 class="page-heading">Posts</h1>
-
+<div class="background-image">
+  <img src = "../images/pepperface.jpg">
 </div>
