new background image, new theme colours, fonts

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 ---
 <div class="background-image">
-  <img src = "../images/pepperface.jpg">
+  <img src = "../images/mullet.jpg">
 </div>
