--- a/index.html
+++ b/index.html
@@ -4,4 +4,9 @@ layout: home
 
 <div class="background-image">
   <img src = "../images/mullet.jpg">
+  <div class="circles">
+    <div class="circle-btn circle-1"></div>
+    <div class="circle-btn circle-2"></div>
+    <div class="circle-btn circle-3"></div>
+  </div>
 </div>
