--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
 
 <div class="background-image">
-  <img src = "../images/mullet.jpg">
+  <img src = "../images/mainpic.jpg">
   <div class="circles">
     <a href="/about">
       <div class="circle-btn circle-1">
