--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <p> I'm Pepper, and I like to design things. I'm pretty good with user experience, responsive design, and the usual trendy malarkey that designers tend to brag about. I'm also a writer, knitter, and mountain biker. I spend a lot of my personal time making useless things, and a lot of my work time making useful things. CSS and HTML are skills that I'm working on.
     <div class="row">
         <div class="col-md-4 text-center">
-            <img src="http://placekitten.com/300/300">
+            <img src="http://placekitten.com/g/200/300">
         </div>
         <div class="col-md-4 text-center">
-            <img src="http://placekitten.com/300/300">
+            <img src="http://placekitten.com/g/200/300">
         </div>
         <div class="col-md-4 text-center">
-            <img src="http://placekitten.com/300/300">
+            <img src="http://placekitten.com/g/200/300">
         </div>
     </div>
 </div>
