floaty nav and nice grid.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <link rel="stylesheet" type="text/css" href="main.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
@@ -8,18 +9,48 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <a href="/" class="navbar-brand"> Pepper Curry: Designer &amp; Illustrator </a>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="/">About</a></li>
+            <li><a href="/">Writing</a></li>
+            <li><a href="/">Artwork</a></li>
+        </ul>
+    </div>
+</div>
 <div class="container">
-    <h1> Pepper Curry: Designer & Illustrator </h1>
-    <p> I'm Pepper, and I like to design things. I'm pretty good with user experience, responsive design, and the usual trendy malarkey that designers tend to brag about. I'm also a writer, knitter, and mountain biker. I spend a lot of my personal time making useless things, and a lot of my work time making useful things. CSS and HTML are skills that I'm working on.
-    <div class="row">
-        <div class="col-md-4 text-center">
-            <img src="http://placekitten.com/g/200/300">
+    <div class="row center-block top-buffer">
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
-        <div class="col-md-4 text-center">
-            <img src="http://placekitten.com/g/200/300">
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
-        <div class="col-md-4 text-center">
-            <img src="http://placekitten.com/g/200/300">
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
+        </div>
+    </div>
+    <div class="row center-block top-buffer">
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
+        </div>
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
+        </div>
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
+        </div>
+    </div>
+    <div class="row center-block top-buffer">
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
+        </div>
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
+        </div>
+        <div class="col-sm-4 mini-margin">
+            <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
     </div>
 </div>
