new main section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         </ul>
     </div>
 </div>
+<div class="container-fluid">
+    <div class="header">
+        <div class="text-vertical-center">
+            <h1>
+                Hi, I'm Pepper.
+            </h1>
+            <h3 class="lead">
+                I'm a designer and illustrator.
+            </h3>
+        </div>
+    </div>
+</div>
 <div class="container">
     <div class="row center-block top-buffer">
         <div class="col-sm-4 mini-margin">
