--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
         <h1>
             Hi, I'm Pepper.
         </h1>
-        <h3 class="lead">
-            I'm a designer and illustrator.
-        </h3>
+        <div class="container">
+            <h3 class="lead">
+                I'm a designer and illustrator. I work at Rabid as their lead designer. I have a Fine Arts BFA from CalArts, and I like to draw cartoons and practice hand lettering. I also VJ and do digital artwork in a variety of mediums.
+            </h3>
+        </div>
+        <a class="btn btn-primary" href="#">View My Work</a>
     </div>
 </div>
 <div class="container">
