--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -28,7 +25,7 @@
                 I'm a designer and illustrator. I work at Rabid as their lead designer. I have a Fine Arts BFA from CalArts, and I like to draw cartoons and practice hand lettering. I also VJ and do digital artwork in a variety of mediums.
             </h3>
         </div>
-        <a class="btn btn-primary" href="#">View My Work</a>
+        <a class="btn btn-primary" href="#" role="button">View My Work</a>
     </div>
 </div>
 <div class="container">
