--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <head>
+    <script src="//use.typekit.net/tgl4auz.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
