--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 I'm a designer and illustrator. I work at Rabid as their lead designer. I have a Fine Arts BFA from CalArts, and I like to draw cartoons and practice hand lettering. I also VJ and do digital artwork in a variety of mediums.
             </h3>
         </div>
-        <a class="btn btn-primary" href="#" role="button">View My Work</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button">View My Work</a>
     </div>
 </div>
 <div class="container">
