--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">About</a></li>
-            <li><a href="/">Writing</a></li>
-            <li><a href="/">Artwork</a></li>
+            <li><a href="/">ABOUT</a></li>
+            <li><a href="/">WRITING</a></li>
+            <li><a href="/">ARTWORK</a></li>
         </ul>
     </div>
 </div>
