--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/">ABOUT</a></li>
-            <li><a href="/">WRITING</a></li>
+            <li><a href="/">SKILLS</a></li>
             <li><a href="/">ARTWORK</a></li>
         </ul>
     </div>
@@ -24,10 +24,40 @@
         </h1>
         <div class="container">
             <h3 class="lead">
-                I'm a designer and illustrator. I work at Rabid as their lead designer. I have a Fine Arts BFA from CalArts, and I like to draw cartoons and practice hand lettering. I also VJ and do digital artwork in a variety of mediums.
+                It's nice to meet you.
             </h3>
         </div>
         <a class="btn btn-primary btn-lg" href="#" role="button">Coming Soon</a>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="content-width center-block">
+        <div class="row">
+            <h2 class="text-center">ABOUT</h2>
+            <div class="col-sm-8">
+                <p>I'm Pepper Curry. I'm a designer across a variety of platforms, including web, print, branding, and illustration. I specialise in web and branding.</p>
+                <p>I recieved a BFA in Fine Art from the prestigious California Institute of the Arts in 2011. Since then, I relocated to Wellington, New Zealand. I've worked for a variety of creative businesses here, including BizDojo, The Jig Lab, and currently, Rabid.
+                <p>What makes me a unique designer is that I bring a fine art sensibility to user experience, designing flows that work together beautifully for the user, but also have a certain flair to them. This means that each design I create is bespoke, constructed with your needs in mind, and assembled with care.</p>
+                <p>I'm also an avid mountain biker, knitter, and Magic: The Gathering player. I'm enthusiastic about projects that have positive social impact, especially in the areas of environmentalism, social equality, and education.</p>
+            </div>
+            <div class="col-sm-4">
+                <img src="/images/avatar.jpg" class="img-responsive avatar img-circle">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container orange-bg">
+    <div class="row center-block top-buffer">
+        <h2 class="text-center">SKILLS</h2>
+        <div class="col-sm-4 mega-margin text-center">
+            <p>An icon and some details here.</p>
+        </div>
+        <div class="col-sm-4 mega-margin text-center">
+            <p>An icon and some details here.</p>
+        </div>
+        <div class="col-sm-4 mega-margin text-center">
+            <p>An icon and some details here.</p>
+        </div>
     </div>
 </div>
 <div class="container">
