almost perfect spacing, missing push/pull

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 </div>
 <div class="container-fluid">
     <div class="content-width center-block">
-        <div class="row">
+        <div class="row content-buffer">
             <h2 class="text-center">ABOUT</h2>
-            <div class="col-sm-12 col-md-5">
+            <div class="col-sm-12 col-md-5 content-buffer">
                 <img src="/images/avatar.jpg" class="img-responsive avatar img-circle center-block">
             </div>
-            <div class="col-sm-12 col-md-7">
+            <div class="col-sm-12 col-md-7 content-buffer">
                 <p>I'm Pepper Curry. I'm a designer across a variety of platforms, including web, print, branding, and illustration. I specialise in web and branding.</p>
                 <p>I recieved a BFA in Fine Art from the prestigious California Institute of the Arts in 2011. Since then, I relocated to Wellington, New Zealand. I've worked for a variety of creative businesses here, including BizDojo, The Jig Lab, and currently, Rabid.
                 <p>What makes me a unique designer is that I bring a fine art sensibility to user experience, designing flows that work together beautifully for the user, but also have a certain flair to them. This means that each design I create is bespoke, constructed with your needs in mind, and assembled with care.</p>
@@ -47,7 +47,7 @@
     </div>
 </div>
 <div class="container orange-bg">
-    <div class="row center-block top-buffer">
+    <div class="row center-block content-buffer">
         <h2 class="text-center">SKILLS</h2>
         <div class="col-sm-4 mega-margin text-center">
             <p>An icon and some details here.</p>
@@ -61,7 +61,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="row center-block top-buffer">
+    <div class="row center-block content-buffer">
         <div class="col-sm-4 mini-margin">
             <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
@@ -72,7 +72,7 @@
             <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
     </div>
-    <div class="row center-block top-buffer">
+    <div class="row center-block content-buffer">
         <div class="col-sm-4 mini-margin">
             <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
@@ -83,7 +83,7 @@
             <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
     </div>
-    <div class="row center-block top-buffer">
+    <div class="row center-block content-buffer">
         <div class="col-sm-4 mini-margin">
             <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
