--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="content-width center-block">
         <div class="row content-buffer">
             <h2 class="text-center">ABOUT</h2>
-            <div class="col-sm-12 col-md-5 content-buffer">
+            <div class="col-sm-12 col-md-5 col-md-push-7 content-buffer">
                 <img src="/images/avatar.jpg" class="img-responsive avatar img-circle center-block">
             </div>
-            <div class="col-sm-12 col-md-7 content-buffer">
+            <div class="col-sm-12 col-md-7 col-md-pull-5 content-buffer">
                 <p>I'm Pepper Curry. I'm a designer across a variety of platforms, including web, print, branding, and illustration. I specialise in web and branding.</p>
                 <p>I recieved a BFA in Fine Art from the prestigious California Institute of the Arts in 2011. Since then, I relocated to Wellington, New Zealand. I've worked for a variety of creative businesses here, including BizDojo, The Jig Lab, and currently, Rabid.
                 <p>What makes me a unique designer is that I bring a fine art sensibility to user experience, designing flows that work together beautifully for the user, but also have a certain flair to them. This means that each design I create is bespoke, constructed with your needs in mind, and assembled with care.</p>
@@ -46,8 +46,8 @@
         </div>
     </div>
 </div>
-<div class="container orange-bg">
-    <div class="row center-block content-buffer">
+<div class="container-fluid orange-bg">
+    <div class="row center-block content-buffer content-width">
         <h2 class="text-center">SKILLS</h2>
         <div class="col-sm-4 mega-margin text-center">
             <p>An icon and some details here.</p>
