new main screen

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <script src="//use.typekit.net/tgl4auz.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
@@ -19,14 +20,7 @@
 </div>
 <div class="header">
     <div class="text-vertical-center">
-        <h1>
-            Hi, I'm Pepper.
-        </h1>
-        <div class="container">
-            <h3 class="lead">
-                It's nice to meet you.
-            </h3>
-        </div>
+        <img src="images/brand-01.svg" class="img-responsive center-block top-buffer" width="800">
         <a class="btn btn-primary btn-lg" href="#" role="button">Coming Soon</a>
     </div>
 </div>
@@ -46,23 +40,23 @@
         </div>
     </div>
 </div>
-<div class="container-fluid orange-bg">
+<div class="container-fluid green-bg">
     <div class="row center-block content-buffer content-width">
         <h2 class="text-center">SKILLS</h2>
-        <div class="col-sm-4 mega-margin text-center">
+        <div class="col-sm-4 text-center">
             <p>An icon and some details here.</p>
         </div>
-        <div class="col-sm-4 mega-margin text-center">
+        <div class="col-sm-4 text-center">
             <p>An icon and some details here.</p>
         </div>
-        <div class="col-sm-4 mega-margin text-center">
+        <div class="col-sm-4 text-center">
             <p>An icon and some details here.</p>
         </div>
     </div>
 </div>
 <div class="container">
     <div class="row center-block content-buffer">
-        <div class="col-sm-4 mini-margin">
+        <div class="col-sm-4">
             <img class="center-block" src="http://placekitten.com/g/200/300">
         </div>
         <div class="col-sm-4 mini-margin">
