--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 </nav>
-<body data-spy="scroll">
+<body>
     <div class="header">
         <div class="text-vertical-center">
             <img src="images/brand-01.svg" class="img-responsive center-block top-buffer" width="800">
