sorted the skills grid. friggin clarify

--- a/index.html
+++ b/index.html
@@ -46,19 +46,40 @@
     <div class="container-fluid green-bg" id="skills">
         <div class="row center-block content-buffer content-width">
             <h2 class="text-center">SKILLS</h2>
-            <div class="col-sm-4 text-center">
-                <p>An icon and some details here.</p>
+            <div class="col-sm-5 text-center top-buffer padding-fix">
+                <div class="magic-circle center-block">
+                    <i class="fa fa-desktop fa-5x icon-buffer"></i>
+                </div>
+                <h3>Web Design</h3>
+                <p>I'm great at prototyping, wireframing, and mockups. I also have extensive experience communicating with developers and have a strong understanding of HTML and CSS.</p>
             </div>
-            <div class="col-sm-4 text-center">
-                <p>An icon and some details here.</p>
+            <div class="col-sm-offset-2 col-sm-5 text-center top-buffer padding-fix">
+                <div class="magic-circle center-block">
+                    <i class="fa fa-thumbs-up fa-5x icon-buffer"></i>
+                </div>
+                <h3>User Experience</h3>
+                <p>Do you know what your users want? I can find out. User testing, interviews, and research are key to the success of your product, and I'm well versed in the UX process.</p>
             </div>
-            <div class="col-sm-4 text-center">
-                <p>An icon and some details here.</p>
+             <div class="clearfix visible-sm-block"></div>
+            <div class="col-sm-5 text-center top-buffer padding-fix">
+                <div class="magic-circle center-block">
+                    <i class="fa fa-diamond fa-5x icon-buffer"></i>
+                </div>
+                <h3>Branding</h3>
+                <p>I bring a fine art sensibility to your product's brand, giving it unique quality that will help you stand out in the market. Whether it's logos, theming elements, or messaging, I'm able to make it rock.</p>
+            </div>
+            <div class="col-sm-offset-2 col-sm-5 text-center top-buffer padding-fix">
+                <div class="magic-circle center-block">
+                    <i class="fa fa-paint-brush fa-5x icon-buffer"></i>
+                </div>
+                <h3>Illustration</h3>
+                <p>I have 10 years of experience doing hand and digital illustration. I can apply these skills to extend your brand image, create original works, or provide editorial images.</p>
             </div>
         </div>
     </div>
     <div class="container" id="work">
         <div class="row center-block content-buffer">
+            <h2 class="text-center">WORK</h2>
             <div class="col-sm-4">
                 <img class="center-block" src="http://placekitten.com/g/200/300">
             </div>
