--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="header">
         <div class="text-vertical-center">
             <img src="images/brand-01.svg" class="img-responsive center-block top-buffer" width="800">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Coming Soon</a>
+            <p>UNDER CONSTRUCTION</P>
         </div>
     </div>
     <div class="container-fluid" id="about">
