--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <div class="header">
         <div class="text-vertical-center">
             <img src="images/brand-01.svg" class="img-responsive center-block top-buffer" width="800">
-            <p>UNDER CONSTRUCTION</P>
         </div>
     </div>
     <div class="container-fluid" id="about">
@@ -79,38 +78,39 @@
         </div>
     </div>
     <div class="container" id="work">
-        <div class="row center-block content-buffer">
+        <div class="row center-block content-buffer text-center">
             <h2 class="text-center">WORK</h2>
-            <div class="col-sm-4">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
-            </div>
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
-            </div>
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
+            <div class="col-xs-12 mini-margin">
+                <a class="portfolio-item" href="http://retail.kiwi">
+                    <img class="center-block content-buffer image-border img-responsive" src="/images/retailnz.png">
+                    <h3>RETAIL NZ</h3>
+                    <p>Overhauling a very outdated site to a professional, modern look and CMS functionality.</p>
+                </a>
             </div>
         </div>
-        <div class="row center-block content-buffer">
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
-            </div>
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
-            </div>
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
+        <div class="row center-block content-buffer text-center">
+            <div class="col-xs-12 mini-margin">
+                <a href="http://www.rabid.co.nz">
+                    <img class="center-block content-buffer image-border img-responsive" src="/images/rabidsite.png">
+                    <h3>RABID</h3>
+                    <p>Bringing imagery and clean colours to keep in line with current trends.</p>
+                </a>
             </div>
         </div>
-        <div class="row center-block content-buffer">
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
+        <div class="row center-block content-buffer text-center">
+            <div class="col-xs-12 mini-margin">
+                <a href="https://thenounproject.com/sempercapsicum">
+                    <img class="center-block content-buffer img-responsive" src="/images/allicons.png">
+                    <h3 class="text-center">NOUN PROJECT ICONS</h3>
+                    <p>Icons currently for sale on the Noun Project</p>
+                </a>
             </div>
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
-            </div>
-            <div class="col-sm-4 mini-margin">
-                <img class="center-block" src="http://placekitten.com/g/200/300">
+        </div>
+        <div class="row center-block content-buffer text-center">
+            <div class="col-xs-12 mini-margin">
+                <img class="center-block content-buffer img-responsive" src="/images/invitedrawing.jpg">
+                <h3 class="text-center">ILLUSTRATION</h3>
+                <p>Hand drawn and watercolour</p>
             </div>
         </div>
     </div>
