--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <p>I recieved a BFA in Fine Art from the prestigious California Institute of the Arts in 2011. Since then, I relocated to Wellington, New Zealand. I've worked for a variety of creative businesses here, including BizDojo, The Jig Lab, and currently, Rabid.
                     <p>What makes me a unique designer is that I bring a fine art sensibility to user experience, designing flows that work together beautifully for the user, but also have a certain flair to them. This means that each design I create is bespoke, constructed with your needs in mind, and assembled with care.</p>
                     <p>I'm also an avid mountain biker, knitter, and Magic: The Gathering player. I'm enthusiastic about projects that have positive social impact, especially in the areas of environmentalism, social equality, and education.</p>
+                    <p>Feel free to contact me at <a href="mailto:sempercapsicum@gmail.com">sempercapsicum[at]gmail.com</a></p>
                 </div>
             </div>
         </div>
