--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <nav>
@@ -115,4 +112,6 @@
             </div>
         </div>
     </div>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="smoothscroll.js"></script>
 </body>
