--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
                 <p>Hand drawn and watercolour</p>
             </div>
         </div>
+        <div class=" text-center top-buffer">
+            <a class="back-to-top" href="#">
+                <h3>Back To Top</h3>
+            </a>
+        </div>
     </div>
+
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="smoothscroll.js"></script>
 </body>
