fixed mobile scroll

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
     </div>
     <div class="container-fluid" id="about">
-        <div class="content-width center-block">
-            <div class="row content-buffer">
+        <div class="container center-block">
+            <div class="row content-buffer mobile-buffer">
                 <h2 class="text-center">ABOUT</h2>
                 <div class="col-sm-12 col-md-5 col-md-push-7 content-buffer">
                     <img src="/images/avatar.jpg" class="img-responsive avatar img-circle center-block">
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="container-fluid green-bg" id="skills">
-        <div class="row center-block content-buffer content-width">
+        <div class="row center-block content-buffer mobile-buffer container">
             <h2 class="text-center">SKILLS</h2>
             <div class="col-sm-5 text-center top-buffer padding-fix">
                 <div class="magic-circle center-block">
@@ -76,8 +76,9 @@
         </div>
     </div>
     <div class="container" id="work">
-        <div class="row center-block content-buffer text-center">
+        <div class="row center-block content-buffer mobile-buffer text-center">
             <h2 class="text-center">WORK</h2>
+        <div class="row">
             <div class="col-xs-12 mini-margin">
                 <a class="portfolio-item" href="http://retail.kiwi">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/retailnz.png">
