actually added new work link

--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
     <div class="container" id="work">
         <div class="row center-block content-buffer mobile-buffer text-center">
             <h2 class="text-center">WORK</h2>
+        <div class="row center-block content-buffer text-center">
+            <div class="col-xs-12 mini-margin">
+                <a class="portfolio-item" href="https://www.privacy.org.nz/further-resources/privacy-statement-generator/">
+                    <img class="center-block content-buffer image-border img-responsive" src="/images/psg.png">
+                    <h3>Privacy Statement Generator</h3>
+                    <p>Interaction and UX design for the Privacy Commission of New Zealand's Privacy Statement Generator.</p>
+                </a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-xs-12 mini-margin">
                 <a class="portfolio-item" href="http://retail.kiwi">
