removed color and formatting from sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <nav>
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-header navbar-fixed-top">
+        <a class="navbar-brand" href="#">
+            <img alt="Brand" src="images/brand-01-blk.svg" class="img-responsive" width="200">
+        </a>
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#about">ABOUT</a></li>
@@ -19,57 +22,41 @@
     </div>
 </nav>
 <body>
-    <div class="header">
-        <div class="text-vertical-center">
-            <img src="images/brand-01.svg" class="img-responsive center-block top-buffer" width="800">
-        </div>
-    </div>
     <div class="container-fluid" id="about">
         <div class="container center-block">
             <div class="row content-buffer mobile-buffer">
-                <h2 class="text-center">ABOUT</h2>
-                <div class="col-sm-12 col-md-5 col-md-push-7 content-buffer">
-                    <img src="/images/avatar.jpg" class="img-responsive avatar img-circle center-block">
+                <div class="col-xs-3">
                 </div>
-                <div class="col-sm-12 col-md-7 col-md-pull-5 content-buffer">
-                    <p>I'm Pepper Curry. I'm a designer across a variety of platforms, including web, print, branding, and illustration. I specialise in web and branding.</p>
-                    <p>I recieved a BFA in Fine Art from the prestigious California Institute of the Arts in 2011. Since then, I relocated to Wellington, New Zealand. I've worked for a variety of creative businesses here, including BizDojo, The Jig Lab, and currently, Rabid.
-                    <p>What makes me a unique designer is that I bring a fine art sensibility to user experience, designing flows that work together beautifully for the user, but also have a certain flair to them. This means that each design I create is bespoke, constructed with your needs in mind, and assembled with care.</p>
-                    <p>I'm also an avid mountain biker, knitter, and Magic: The Gathering player. I'm enthusiastic about projects that have positive social impact, especially in the areas of environmentalism, social equality, and education.</p>
-                    <p>Feel free to contact me at <a href="mailto:sempercapsicum@gmail.com">sempercapsicum[at]gmail.com</a></p>
+                <div class="col-xs-9 text-right">
+                    <h2>ABOUT</h2>
+                    <div class="content-buffer">
+                        <p>I'm Pepper Curry. I'm a designer across a variety of platforms, including web, print, branding, and illustration. I specialise in web and branding.</p>
+                        <p>I recieved a BFA in Fine Art from the prestigious California Institute of the Arts in 2011. Since then, I relocated to Wellington, New Zealand. I've worked for a variety of creative businesses here, including BizDojo, The Jig Lab, and currently, Rabid.
+                        <p>What makes me a unique designer is that I bring a fine art sensibility to user experience, designing flows that work together beautifully for the user, but also have a certain flair to them. This means that each design I create is bespoke, constructed with your needs in mind, and assembled with care.</p>
+                        <p>I'm also an avid mountain biker, knitter, and Magic: The Gathering player. I'm enthusiastic about projects that have positive social impact, especially in the areas of environmentalism, social equality, and education.</p>
+                        <p>Feel free to contact me at <a href="mailto:sempercapsicum@gmail.com">sempercapsicum[at]gmail.com</a></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid green-bg" id="skills">
+    <div class="container-fluid" id="skills">
         <div class="row center-block content-buffer mobile-buffer container">
             <h2 class="text-center">SKILLS</h2>
             <div class="col-sm-5 text-center top-buffer padding-fix">
-                <div class="magic-circle center-block">
-                    <i class="fa fa-desktop fa-5x icon-buffer"></i>
-                </div>
                 <h3>Web Design</h3>
                 <p>I'm great at prototyping, wireframing, and mockups. I also have extensive experience communicating with developers and have a strong understanding of HTML and CSS.</p>
             </div>
             <div class="col-sm-offset-2 col-sm-5 text-center top-buffer padding-fix">
-                <div class="magic-circle center-block">
-                    <i class="fa fa-thumbs-up fa-5x icon-buffer"></i>
-                </div>
                 <h3>User Experience</h3>
                 <p>Do you know what your users want? I can find out. User testing, interviews, and research are key to the success of your product, and I'm well versed in the UX process.</p>
             </div>
              <div class="clearfix visible-sm-block"></div>
             <div class="col-sm-5 text-center top-buffer padding-fix">
-                <div class="magic-circle center-block">
-                    <i class="fa fa-diamond fa-5x icon-buffer"></i>
-                </div>
                 <h3>Branding</h3>
                 <p>I bring a fine art sensibility to your product's brand, giving it unique quality that will help you stand out in the market. Whether it's logos, theming elements, or messaging, I'm able to make it rock.</p>
             </div>
             <div class="col-sm-offset-2 col-sm-5 text-center top-buffer padding-fix">
-                <div class="magic-circle center-block">
-                    <i class="fa fa-paint-brush fa-5x icon-buffer"></i>
-                </div>
                 <h3>Illustration</h3>
                 <p>I have 10 years of experience doing hand and digital illustration. I can apply these skills to extend your brand image, create original works, or provide editorial images.</p>
             </div>
