responsive nav and alignments

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
         </div>
     </div>
 </nav>
+<div class="alt-nav">
+</div>
 <body>
     <div class="container-fluid" id="about">
         <div class="container center-block">
             <div class="row content-buffer mobile-buffer">
-                <div class="col-xs-3">
+                <div class="col-sm-3">
                 </div>
-                <div class="col-xs-9 text-right">
+                <div class="col-sm-9 text-right">
                     <h2>ABOUT</h2>
                     <div class="content-buffer">
                         <p>I'm Pepper Curry. I'm a designer across a variety of platforms, including web, print, branding, and illustration. I specialise in web and branding.</p>
@@ -41,41 +43,47 @@
         </div>
     </div>
     <div class="container-fluid" id="skills">
-        <div class="row center-block content-buffer mobile-buffer container">
-            <h2 class="text-center">SKILLS</h2>
-            <div class="col-sm-5 text-center top-buffer padding-fix">
-                <h3>Web Design</h3>
-                <p>I'm great at prototyping, wireframing, and mockups. I also have extensive experience communicating with developers and have a strong understanding of HTML and CSS.</p>
-            </div>
-            <div class="col-sm-offset-2 col-sm-5 text-center top-buffer padding-fix">
-                <h3>User Experience</h3>
-                <p>Do you know what your users want? I can find out. User testing, interviews, and research are key to the success of your product, and I'm well versed in the UX process.</p>
-            </div>
-             <div class="clearfix visible-sm-block"></div>
-            <div class="col-sm-5 text-center top-buffer padding-fix">
-                <h3>Branding</h3>
-                <p>I bring a fine art sensibility to your product's brand, giving it unique quality that will help you stand out in the market. Whether it's logos, theming elements, or messaging, I'm able to make it rock.</p>
-            </div>
-            <div class="col-sm-offset-2 col-sm-5 text-center top-buffer padding-fix">
-                <h3>Illustration</h3>
-                <p>I have 10 years of experience doing hand and digital illustration. I can apply these skills to extend your brand image, create original works, or provide editorial images.</p>
+        <div class="row center-block container content-buffer mobile-buffer text-right">
+            <h2>SKILLS</h2>
+                <div class="col-sm-6">
+                </div>
+                <div class="col-sm-6 top-buffer padding-fix">
+                    <h3>Web Design</h3>
+                    <p>I'm great at prototyping, wireframing, and mockups. I also have extensive experience communicating with developers and have a strong understanding of HTML and CSS.</p>
+                </div>
+                <div class="col-sm-6">
+                </div>
+                <div class="col-sm-6 top-buffer padding-fix">
+                    <h3>User Experience</h3>
+                    <p>Do you know what your users want? I can find out. User testing, interviews, and research are key to the success of your product, and I'm well versed in the UX process.</p>
+                </div>
+                <div class="col-sm-6">
+                </div>
+                <div class="col-sm-6 top-buffer padding-fix">
+                    <h3>Branding</h3>
+                    <p>I bring a fine art sensibility to your product's brand, giving it unique quality that will help you stand out in the market. Whether it's logos, theming elements, or messaging, I'm able to make it rock.</p>
+                </div>
+                <div class="col-sm-6">
+                </div>
+                <div class="col-sm-6 top-buffer padding-fix">
+                    <h3>Illustration</h3>
+                    <p>I have 10 years of experience doing hand and digital illustration. I can apply these skills to extend your brand image, create original works, or provide editorial images.</p>
+                </div>
             </div>
         </div>
     </div>
     <div class="container" id="work">
         <div class="row center-block content-buffer mobile-buffer text-center">
-            <h2 class="text-center">WORK</h2>
+            <h2 class="text-right">WORK</h2>
         <div class="row center-block content-buffer text-center">
-            <div class="col-xs-12 mini-margin">
+            <div class="col-xs-6 mini-margin">
                 <a class="portfolio-item" href="https://www.privacy.org.nz/further-resources/privacy-statement-generator/">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/psg.png">
                     <h3>Privacy Statement Generator</h3>
                     <p>Interaction and UX design for the Privacy Commission of New Zealand's Privacy Statement Generator.</p>
                 </a>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 mini-margin">
+            <div class="col-xs-6 mini-margin">
                 <a class="portfolio-item" href="http://retail.kiwi">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/retailnz.png">
                     <h3>RETAIL NZ</h3>
@@ -84,16 +92,14 @@
             </div>
         </div>
         <div class="row center-block content-buffer text-center">
-            <div class="col-xs-12 mini-margin">
+            <div class="col-xs-6 mini-margin">
                 <a href="http://www.rabid.co.nz">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/rabidsite.png">
                     <h3>RABID</h3>
                     <p>Bringing imagery and clean colours to keep in line with current trends.</p>
                 </a>
             </div>
-        </div>
-        <div class="row center-block content-buffer text-center">
-            <div class="col-xs-12 mini-margin">
+             <div class="col-xs-6 mini-margin">
                 <a href="https://thenounproject.com/sempercapsicum">
                     <img class="center-block content-buffer img-responsive" src="/images/allicons.png">
                     <h3 class="text-center">NOUN PROJECT ICONS</h3>
@@ -107,11 +113,6 @@
                 <h3 class="text-center">ILLUSTRATION</h3>
                 <p>Hand drawn and watercolour</p>
             </div>
-        </div>
-        <div class=" text-center top-buffer">
-            <a class="back-to-top" href="#">
-                <h3>Back To Top</h3>
-            </a>
         </div>
     </div>
 
