aligning to avoid logo overlap

--- a/index.html
+++ b/index.html
@@ -76,14 +76,16 @@
         <div class="row center-block content-buffer mobile-buffer text-center">
             <h2 class="text-right">WORK</h2>
         <div class="row center-block content-buffer text-center">
-            <div class="col-xs-6 mini-margin">
+            <div class="col-xs-2">
+            </div>
+            <div class="col-xs-5 mini-margin">
                 <a class="portfolio-item" href="https://www.privacy.org.nz/further-resources/privacy-statement-generator/">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/psg.png">
                     <h3>Privacy Statement Generator</h3>
                     <p>Interaction and UX design for the Privacy Commission of New Zealand's Privacy Statement Generator.</p>
                 </a>
             </div>
-            <div class="col-xs-6 mini-margin">
+            <div class="col-xs-5 mini-margin">
                 <a class="portfolio-item" href="http://retail.kiwi">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/retailnz.png">
                     <h3>RETAIL NZ</h3>
@@ -92,14 +94,16 @@
             </div>
         </div>
         <div class="row center-block content-buffer text-center">
-            <div class="col-xs-6 mini-margin">
+            <div class="col-xs-2">
+            </div>
+            <div class="col-xs-5 mini-margin">
                 <a href="http://www.rabid.co.nz">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/rabidsite.png">
                     <h3>RABID</h3>
                     <p>Bringing imagery and clean colours to keep in line with current trends.</p>
                 </a>
             </div>
-             <div class="col-xs-6 mini-margin">
+             <div class="col-xs-5 mini-margin">
                 <a href="https://thenounproject.com/sempercapsicum">
                     <img class="center-block content-buffer img-responsive" src="/images/allicons.png">
                     <h3 class="text-center">NOUN PROJECT ICONS</h3>
