--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                 <div class="col-sm-9 text-right">
                     <h2>ABOUT</h2>
                     <div class="content-buffer">
-                        <p>I'm Pepper Curry. I'm a designer across a variety of platforms, including web, print, branding, and illustration. I specialise in web and branding.</p>
-                        <p>I recieved a BFA in Fine Art from the prestigious California Institute of the Arts in 2011. Since then, I relocated to Wellington, New Zealand. I've worked for a variety of creative businesses here, including BizDojo, The Jig Lab, and currently, Rabid.
-                        <p>What makes me a unique designer is that I bring a fine art sensibility to user experience, designing flows that work together beautifully for the user, but also have a certain flair to them. This means that each design I create is bespoke, constructed with your needs in mind, and assembled with care.</p>
-                        <p>I'm also an avid mountain biker, knitter, and Magic: The Gathering player. I'm enthusiastic about projects that have positive social impact, especially in the areas of environmentalism, social equality, and education.</p>
-                        <p>Feel free to contact me at <a href="mailto:sempercapsicum@gmail.com">sempercapsicum[at]gmail.com</a></p>
+                        <p>SITE IS UNDER CONSTRUCTION</P>
+                        <p>Pepper Curry is a designer and illustrator currently working in Wellington, New Zealand, with an eye towards transitioning to remote work. She's been working in New Zealand for three years.</p>
+                        <p>Pepper has designed solutions for organisations such as the New Zealand Privacy Commission, NZ Navigator, Retail NZ, Grow Wellington/Wellington City Council, Papa Taiao - Earthcare, PledgeMe, and many more (see work section for highlights). She's skilled at working directly with developers, and has strengths in UX, UI, and responsive design.</p>
+                        <p>Beginning with workshopping, to prototyping and wireframing, to styling and branding, Pepper is used to seeing a project through to the finish. She'll work closely with development to ensure that the design's focus remains on user experience, consistency, and aesthetic simplicity. She excels at creating natural, minimal user flows.</p>
+                        <p>Pepper's interests outside of work include yoga, VJ/DJing, gardening, knitting, tabletop/digital gaming, and illustration. Her plans for the future are to find a remote working solution that enables her to live in the remote reaches of Northland, New Zealand with her partner, Peter.</p>
+                        <p><a href="mailto:sempercapsicum@gmail.com" class="special-link">sempercapsicum[at]gmail.com</a></p>
                     </div>
                 </div>
             </div>
@@ -75,7 +76,7 @@
     <div class="container" id="work">
         <div class="row center-block content-buffer mobile-buffer text-center">
             <h2 class="text-right">WORK</h2>
-        <div class="row center-block content-buffer text-center">
+        <div class="row center-block text-center">
             <div class="col-xs-2">
             </div>
             <div class="col-xs-5 mini-margin">
