--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
             <div class="row content-buffer mobile-buffer">
                 <div class="col-sm-3">
                 </div>
-                <div class="col-sm-9 text-right">
-                    <h2>ABOUT</h2>
+                <div class="col-sm-9">
+                    <h2 class="text-right">ABOUT</h2>
                     <div class="content-buffer">
-                        <p>SITE IS UNDER CONSTRUCTION</P>
-                        <p>Pepper Curry is a designer and illustrator currently working in Wellington, New Zealand, with an eye towards transitioning to remote work. She's been working in New Zealand for three years.</p>
-                        <p>Pepper has designed solutions for organisations such as the New Zealand Privacy Commission, NZ Navigator, Retail NZ, Grow Wellington/Wellington City Council, Papa Taiao - Earthcare, PledgeMe, and many more (see work section for highlights). She's skilled at working directly with developers, and has strengths in UX, UI, and responsive design.</p>
-                        <p>Beginning with workshopping, to prototyping and wireframing, to styling and branding, Pepper is used to seeing a project through to the finish. She'll work closely with development to ensure that the design's focus remains on user experience, consistency, and aesthetic simplicity. She excels at creating natural, minimal user flows.</p>
-                        <p>Pepper's interests outside of work include yoga, VJ/DJing, gardening, knitting, tabletop/digital gaming, and illustration. Her plans for the future are to find a remote working solution that enables her to live in the remote reaches of Northland, New Zealand with her partner, Peter.</p>
+                        <div class="text-right">
+                            <img src="images/avatar.jpg" class="responsive-img avatar">
+                        </div>
+                        <p>I&#39;m Pepper Curry, a web designer and illustrator with over three years of freelance and dev shop experience. I live in Wellington, New Zealand, a vibrant city with a strong technological and creative culture. Since graduating with a BFA from the California Institute of Arts in 2011, I&#39;ve been doing design work for an varied range of clients (scientists, 3D technologists, government offices, environmentalists, etc.). I moved to New Zealand, and gained a position as the sole Designer at Rabid, a dev shop who focuses on projects for social good. Here, I&#39;ve honed my skills as a web designer with strong responsive and UX skills.</p>
+                        <p>My work is recognised for being minimal, clean, and functional. I bring colour and movement to web principles that work, instead of trying to reinvent the wheel. While this means that my work may not be lone-wolf revolutionary, it means I communicate better with development teams, clients, and users. My wild side tends to come through in my illustrations, which come from a strong Fine Arts background at CalArts.</p>
+                        <p>My current life goal is to move out to Northland, NZ with my partner, Peter, who is a professional chef. We want to have a small homestead to offset our busy careers. I&#39;m enthusiastic about finding full-time, remote work that enables me to live where I like, while still remaining connected to the web community.</p>
+                        <p>Some of my other interests include gardening, knitting, tabletop/desktop gaming, mountain biking, and VJ/DJing. I&#39;m a secret nerd who plays Magic: The Gathering, but can also be found at house gigs in Wellington with my audio-reactive visuals.</p>
                         <p><a href="mailto:sempercapsicum@gmail.com" class="special-link">sempercapsicum[at]gmail.com</a></p>
                     </div>
                 </div>
@@ -44,38 +46,73 @@
         </div>
     </div>
     <div class="container-fluid" id="skills">
-        <div class="row center-block container content-buffer mobile-buffer text-right">
-            <h2>SKILLS</h2>
-                <div class="col-sm-6">
-                </div>
-                <div class="col-sm-6 top-buffer padding-fix">
-                    <h3>Web Design</h3>
-                    <p>I'm great at prototyping, wireframing, and mockups. I also have extensive experience communicating with developers and have a strong understanding of HTML and CSS.</p>
-                </div>
-                <div class="col-sm-6">
-                </div>
-                <div class="col-sm-6 top-buffer padding-fix">
-                    <h3>User Experience</h3>
-                    <p>Do you know what your users want? I can find out. User testing, interviews, and research are key to the success of your product, and I'm well versed in the UX process.</p>
-                </div>
-                <div class="col-sm-6">
-                </div>
-                <div class="col-sm-6 top-buffer padding-fix">
-                    <h3>Branding</h3>
-                    <p>I bring a fine art sensibility to your product's brand, giving it unique quality that will help you stand out in the market. Whether it's logos, theming elements, or messaging, I'm able to make it rock.</p>
-                </div>
-                <div class="col-sm-6">
-                </div>
-                <div class="col-sm-6 top-buffer padding-fix">
-                    <h3>Illustration</h3>
-                    <p>I have 10 years of experience doing hand and digital illustration. I can apply these skills to extend your brand image, create original works, or provide editorial images.</p>
+        <div class="row center-block container content-buffer mobile-buffer">
+            <div class="row">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-9">
+                    <h2 class="text-right">SKILLS</h2>
                 </div>
             </div>
+                <div class="row">
+                    <div class="col-sm-3">
+                    </div>
+                    <div class="col-sm-4 top-buffer padding-fix">
+                        <h3 class="text-center">Web Design</h3>
+                        <ul>
+                            <li>Conceptual workshopping</li>
+                            <li>Iterative prototyping and wireframing (Balsamiq, AI, Atomic.io)</li>
+                            <li>Style guides (typography, colour palettes, iconography)</li>
+                            <li>Lo-med-hi fidelity mockups</li>
+                            <li>Agile process</li>
+                            <li>Intermediate HTML and CSS</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-1">
+                    </div>
+                    <div class="col-sm-4 top-buffer padding-fix">
+                        <h3 class="text-center">User Experience</h3>
+                        <ul>
+                            <li>Working knowledge of usability standards</li>
+                            <li>Research & Study</li>
+                            <li>User interviews (Silverback)</li>
+                            <li>User testing</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">
+                    </div>
+                    <div class="col-sm-4 top-buffer padding-fix">
+                        <h3 class="text-center">Branding</h3>
+                        <ul>
+                            <li>Logo/Icon/Vector design (AI)</li>
+                            <li>Color theming</li>
+                            <li>Ad/Messaging layout (PS/AI)</li>
+                            <li>Report/Messaging/Proposal design (InDesign/PS/AI)</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-1">
+                    </div>
+                    <div class="col-sm-4 top-buffer padding-fix">
+                        <h3 class="text-center">Illustration</h3>
+                        <ul>
+                            <li>Vector art (AI)</li>
+                            <li>Hand lettering</li>
+                            <li>Pen/Ink, Watercolour, Pencil Illustrations</li>
+                            <li>Cartooning/comics</li>
+                        </ul>
+                    </div>
+                </div>
         </div>
     </div>
     <div class="container" id="work">
         <div class="row center-block content-buffer mobile-buffer text-center">
-            <h2 class="text-right">WORK</h2>
+            <div class="row">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-9">
+                    <h2 class="text-right">WORK</h2>
+                </div>
+            </div>
         <div class="row center-block text-center">
             <div class="col-xs-2">
             </div>
