fixed width image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav>
     <div class="navbar navbar-header navbar-fixed-top">
         <a class="navbar-brand" href="#">
-            <img alt="Brand" src="images/brand-01-blk.svg" class="img-responsive" width="200">
+            <img alt="Brand" src="images/brand-01-blk.svg" width="200">
         </a>
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
