new link papa taiao

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                 </a>
             </div>
              <div class="col-xs-5 mini-margin">
-                <a href="#">
+                <a href="http://www.papataiaoearthcare.nz/#welcome">
                     <img class="center-block content-buffer image-border img-responsive" src="/images/papataiao.png">
                     <h3>PAPA TAIAO - EARTHCARE</h3>
-                    <p>Icon design, content layout and organisation, within the Squarespace CMS for ease of client updating. [SITE IN PROGRESS]</p>
+                    <p>Icon design, content layout and organisation, within the Squarespace CMS for ease of client updating.</p>
                 </a>
             </div>
         </div>
