--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <title>Pepper Curry Design: Wellington, NZ Web Designer and Illustrator </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <script src="//use.typekit.net/tgl4auz.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
