fixed spacing issue in work

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col-sm-1">
                     </div>
-                    <div class="col-sm-4 top-buffer padding-fix">
+                    <div class="col-sm-4">
                         <h3 class="text-center">User Experience</h3>
                         <ul>
                             <li>Working knowledge of usability standards</li>
